<resources>

    <string name="app_name">AI Moisture Meter</string>

    <string name="detect_cap">Detection</string>
    <string name="message_cap">Message</string>
    <string name="history_cap">History</string>
    <string name="user_cap">User</string>
    <string name="user_settings">User Settings</string>
    <string name="choose_skin_cap">Change Theme</string>

    <string name="detection_part">Detect Area:</string>
    <string name="detection_time">Detect Time:</string>
    <string name="hand">Hands</string>
    <string name="face">Face</string>
    <string name="eyes">Eyes</string>
    <string name="pre_nursing">Before Nursing</string>
    <string name="post_nursing">After Nursing</string>

    <string name="start">START</string>

    <string name="bluetooth_status">Bluetooth connection status:</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>

    <string name="welcome">Welcome</string>
    <string name="username_or_email">username or email</string>
    <string name="username">username</string>
    <string name="email_address">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>

    <string name="forget_password">Forget password</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="we_will_send_you_a_password_reset_via_email">We will send you a password reset via email.</string>
    <string name="please_check_your_email_and_reset_your_password">Please check your email and reset your password.</string>
    <string name="no_user_found_with_email">No user found with email: </string>
    <string name="login">Login</string>
    <string name="sign_up">New user sign up</string>
    <string name="sign">Sign up</string>
    <string name="cancel_sign_up">Back to the login screen</string>

    <string name="please_fill_up_the_form">Please fill up the form</string>
    <string name="error_username_or_password">Error: Incorrect username or password</string>
    <string name="error_network">Error: Bad network connection</string>
    <string name="error_login">Error: Login fail</string>
    <string name="error_sign_up">Error: Sign up fail</string>

    <string name="incorrect_email_format">Incorrect email format</string>
    <string name="password_not_match">Password not match</string>
    <string name="username_is_occupied">Username \'%@\' is occupied</string>
    <string name="email_is_occupied">Email is occupied</string>

    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="detection_success">Success</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="please_try_again">Please try again</string>
    <string name="you_can_start_using_your_new_password">You can start using your new password now.</string>
    <string name="detection_result_is">The detection result for this time is : </string>
    

    <string name="are_you_sure_logout">Are you sure to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pick_theme">Please pick a theme color?</string>

    <string name="permission_denied">Permission Denied</string>
    <string name="no_permission_for_storage">Please grant permission for the app to access your storage in System Settings.</string>
    <string name="select_you_date_of_birth">Please select your date of birth.</string>
    <string name="select_your_gender">Please tell us your gender.</string>
    <string name="select_your_skin_type">Please select your skin type.</string>
    <string name="bluetooth_status_not_connect">Device not found. Please press the button on top of the device.</string>
    <string name="bluetooth_status_connecting">Connecting the device.</string>
    <string name="bluetooth_status_reading">Ready to detect, press the device on your skin.</string>

    <string name="detection_records">Detection Records:\n</string>


    <string name="please_select_when_and_where">Please choose the correct detection AREA and TIME.</string>
    <string name="email">email</string>
    <string name="phone">phone number</string>
    <string name="date_of_birth">date of birth</string>
    <string name="gender">gender</string>
    <string name="skin_type">skin type</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">current password</string>
    <string name="current_password_not_match">The current password you put do NOT match the record.</string>
    <string name="new_password_not_match">The new passwords you put are NOT the same.</string>
    <string name="new_password">new password</string>
    <string name="confirm_new_password">confirm new password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="dry">Dry</string>
    <string name="normal">Normal</string>
    <string name="oily">Oily</string>
    <string name="language_preference">Language Preference</string>

    <string name="please_enter_your_email_address">Please enter your email address:</string>
    <string name="please_enter_your_phone_number">Please enter your phone number:</string>


    <string name="there_is_no_detection_data_yet">Sorry, there is no detection data yet.</string>
    <!-- News Message -->
    <string name="message_1_title">Experts opinion</string>
    <string name="message_1_brief">What do the doctors from top level hospital say?...</string>

    <string name="message_2_title">What is Najing?</string>
    <string name="message_2_brief">It\'s applied for the field of transdermal drug delivery...</string>

    <string name="message_3_title">The Operation Procedure Of the Najing Bright and Moist</string>
    <string name="message_3_brief">1.face-cleaning, take out the nano-crystal chip...</string>

    <string name="message_4_title">The Principle of the Nano-crystal Chip Branded by \"Najing\"</string>
    <string name="message_4_brief">The skin functioned by Najing nano-crystal chips opening hundreds of channels...</string>

    <string name="message_5_title">Dr. Xu : the Technological Leader of Nano-crystal chip in the world</string>
    <string name="message_5_brief">Dr. Xu, CEO of Natong, the world-class scientist and tech-leader...</string>

    <string name="message_6_title">The Second Seminar about Accelerating Penetrating and Clinical Application of Nano-tech</string>
    <string name="message_6_brief">More than forty clinical experts from dermatology gave their views about...</string>

    <string name="message_7_title">Awards:</string>
    <string name="message_7_brief">Tones of award that won by NanoTech</string>

    <string name="message_8_title">First publishment of Normative Product from Najing Officially</string>
    <string name="message_8_brief">How to identify a real Najing product...</string>



    <!-- NEW STRING -->
    <string name="login_with_wechat">Login with WeChat</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="use_without_login">Use without login</string>
    <string name="start_using_app">Start Using App</string>
    <string name="please_provide_some_basic_info">Please provide the basic information</string>
    <string name="wechat_not_installed_yet">Your device has not install WeChat app yet, please install WeChat first.</string>

    <string name="google_web_client_id">469719428712-u22cfo3a47dmj4sad16eqhgeh1u3sf9q.apps.googleusercontent.com</string>
    <string name="facebook_app_id">563107064027654</string>
    <string name="fb_login_protocol_scheme">fb563107064027654</string>
    <string name="wechat_app_id">wxe3b121858cfd9ba0</string>
    <string name="wechat_app_secret">53359db4f821121739ad41aaf82a17d0</string>

    <string name="please_allow_all_permissions">Please allow all permission required by the app.</string>

</resources>
